; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_hfsplus.c_grub_hfsplus_btree_recptr.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_hfsplus.c_grub_hfsplus_btree_recptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_hfsplus_key = type { i32 }
%struct.grub_hfsplus_btree = type { i32 }
%struct.grub_hfsplus_btnode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.grub_hfsplus_key* (%struct.grub_hfsplus_btree*, %struct.grub_hfsplus_btnode*, i32)* @grub_hfsplus_btree_recptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.grub_hfsplus_key* @grub_hfsplus_btree_recptr(%struct.grub_hfsplus_btree* %0, %struct.grub_hfsplus_btnode* %1, i32 %2) #0 {
  %4 = alloca %struct.grub_hfsplus_btree*, align 8
  %5 = alloca %struct.grub_hfsplus_btnode*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.grub_hfsplus_btree* %0, %struct.grub_hfsplus_btree** %4, align 8
  store %struct.grub_hfsplus_btnode* %1, %struct.grub_hfsplus_btnode** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.grub_hfsplus_btnode*, %struct.grub_hfsplus_btnode** %5, align 8
  %10 = bitcast %struct.grub_hfsplus_btnode* %9 to i8*
  store i8* %10, i8** %7, align 8
  %11 = load %struct.grub_hfsplus_btree*, %struct.grub_hfsplus_btree** %4, align 8
  %12 = load %struct.grub_hfsplus_btnode*, %struct.grub_hfsplus_btnode** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @grub_hfsplus_btree_recoffset(%struct.grub_hfsplus_btree* %11, %struct.grub_hfsplus_btnode* %12, i32 %13)
  store i32 %14, i32* %8, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds i8, i8* %15, i64 %17
  %19 = bitcast i8* %18 to %struct.grub_hfsplus_key*
  ret %struct.grub_hfsplus_key* %19
}

declare dso_local i32 @grub_hfsplus_btree_recoffset(%struct.grub_hfsplus_btree*, %struct.grub_hfsplus_btnode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
